Temp and Conditions Page set
Basic pages linking to temp and conditions, needs styling

--- a/Ctd_Prework/style.css
+++ b/Ctd_Prework/style.css
@@ -6,41 +6,6 @@ Website URL:
 Website Author: Jacky C.
 Author URL: 
 
-Color Guide
-***************
-
-
-*************************************************
-
-Type Guide
-***************
-
-
-Debugging Tools
-***************
-border: 1px solid #fff;
-
-*************************************************/
-
-/************************************************
-*************************************************
-0. CSS Reset ------------------------ 
-1. Universal Styles -----------------
-2. Header & Nav Styles -------------- 
-3. Main Body Styles ----------------- 
-4. Sidebar Styles ------------------- 
-5. Widget Styles --------------------
-6. Footer Styles -------------------- 
-7. Comments & Form Styles ----------- 
-8. Generic Styles ----------- 
-*************************************************
-************************************************/
-
-/*----------------------------------------------
-------------------------------------------------
-0. CSS Reset
-------------------------------------------------
-----------------------------------------------*/
 * {
   margin: 20;
   padding: 0;
@@ -69,6 +34,14 @@ p {
 
 h2 {
   font-size: xx-large;
+}
+
+#conditionsOutput{
+  font-size: x-large;
+}
+
+#tempOutput{
+  font-size: x-large;
 }
 
 /*----------------------------------------------
