--- a/Ctd_Prework/style.css
+++ b/Ctd_Prework/style.css
@@ -19,13 +19,20 @@ Author URL:
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: radial-gradient(circle at 20% 20%, #ffffffaa, #87ceeb 60%),
+              radial-gradient(circle at 50% 30%, #ffffffaa, transparent 70%),
+              radial-gradient(circle at 50% 80%, #ffffffaa, transparent 70%),
+              #87ceeb;
+              background-size: cover;
 }
 /*----------------------------------------------
   ------------------------------------------------
   2. Header & Nav Styles
   ------------------------------------------------
   ----------------------------------------------*/
-h2,
+h1{
+  font-size: 3.5em;
+}
 h3,
 p {
   margin-left: 100px;
@@ -44,38 +51,21 @@ h2 {
   font-size: x-large;
 }
 
-/*----------------------------------------------
-  ------------------------------------------------
-  3. Main Body Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
+div{
+  font-size: 1.5em;
+}
 
-/*----------------------------------------------
-  ------------------------------------------------
-  4. Sidebar Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
+.btn{
+  display: inline-block;
+  padding: 10px 18px;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+}
 
-/*----------------------------------------------
-  ------------------------------------------------
-  5. Widget Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
-
-/*----------------------------------------------
-  ------------------------------------------------
-  6. Footer Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
-
-/*----------------------------------------------
-  ------------------------------------------------
-  7. Comments & Form Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
-
-/*----------------------------------------------
-  ------------------------------------------------
-  8. Generic Styles
-  ------------------------------------------------
-  ----------------------------------------------*/
+.btn:hover{
+  background-color: #2980b9;
+}
